@@ -19,7 +19,7 @@
 
 # SIAM Torrus plugin Autoconf script
 
-AC_INIT(tp-siam, 2.01.01, ssinyagin@users.sourceforge.net)
+AC_INIT(tp-siam, 2.01.02dev, ssinyagin@users.sourceforge.net)
 AC_CONFIG_AUX_DIR(conftools)
 AC_CANONICAL_HOST
 AM_INIT_AUTOMAKE(1.9)
