@@ -1,3 +1,7 @@
+2011-09-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* SIAMDD.pm (checkdevtype): Improved error handling
+
 2011-09-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* NEWS: Plugin release 2.01.01
